# ml-world-cup-prediction

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: live-forecast-update.yml
app/: streamlit_app.py
configs/: backtest_config.yaml  data_config.yaml  model_config.yaml  tournament_2026.yaml
docs/: METHODOLOGY.md
notebooks/: world-cup-2026-analysis.ipynb
outputs/backtest_results/: model_backtest.csv  model_backtest_summary.csv
outputs/evaluation/: ablation_results.csv  ablation_summary.csv  baseline_comparison.csv  baseline_comparison_summary.csv  calibration_by_world_cup.csv  calibration_summary.csv  calibration_table_by_probability_bin.csv  live_update_2026_weight_shadow.csv  live_update_weight_backtest_by_year.csv  live_update_weight_backtest_candidate_summary.csv  live_update_weight_backtest_predictions.csv  live_update_weight_backtest_walk_forward.csv  live_update_weight_backtest_walk_forward_summary.csv  nested_backtest_results.csv  probability_sharpness_report.csv  rolling_prediction_records.csv
queries/: live_update_weight_backtest_report.sql
scripts/: download_data.py  download_historical_knockout_data.py  live_update_gate.py  run_analysis.py  run_live_update_backtest.py  run_live_weight_shadow.py  update_live.py
src/worldcup_prediction/: __init__.py  (+15 more)
tests/: test_backtest.py  test_calibration.py  test_download_data.py  test_elo.py  test_features.py  test_historical_knockout.py  test_live_update_backtest.py  test_live_update_gate.py  test_metrics.py  test_pipeline.py  test_research.py  test_simulator.py
(+88 files in other folders)
